--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </p>
               <ul>
               <p></p>
-              <a href="#" class="btn more-btn">Selengkapnya</a>
+              <a href="Berita1.html" class="btn more-btn">Selengkapnya</a>
             </div>
 
           </div>
