--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
               <img src="IMG-20250107-WA0004.jpg", width="100%", height="200px", max-height="300px">
               <h3>Hebat!, Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>
-                Pada selasa, 7 Januari 2025, siswa-siswi SMAN 1 Tanjung Raja telah menerbitkan sebuah buku berjudul "Aku Kenal Siapa Diriku", yang diresmikan langsung oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...      </p>
+                Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
+              </p>
               <ul>
               <p></p>
-              <a href="Berita1.html" class="btn more-btn">Selengkapnya</a>
+              <a href="#" class="btn more-btn">Selengkapnya</a>
             </div>
 
           </div>
@@ -156,7 +157,7 @@ Buku Aku Kenal Siapa Diriku
       </p>
       <div class="profile mt-auto">
         <!-- Menampilkan gambar halaman pertama PDF -->
-        <iframe src="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/preview" width="100%" height="200px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
         
         <!-- Tautan untuk mengarahkan ke PDF penuh -->
         <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
@@ -310,4 +311,4 @@ Buku Aku Kenal Siapa Diriku
 
 </body>
 
-</html>
+  </html>
