--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 
             <div class="content">
               <img src="IMG-20250107-WA0004.jpg", width="100%", height="200px", max-height="300px">
-              <h3>Hebat!, Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
+              <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>
                 Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
               </p>
               <ul>
               <p></p>
-              <a href="#" class="btn more-btn">Selengkapnya</a>
+              <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Selengkapnya</a>
             </div>
 
           </div>
