--- a/Berita1.html
+++ b/Berita1.html
@@ -168,7 +168,8 @@ Buku Aku Kenal Siapa Diriku
       </p>
       <div class="profile mt-auto">
         <!-- Menampilkan gambar halaman pertama PDF -->
-               <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/preview" width="100%" height="200px" allow="autoplay"></iframe>
+        
         <!-- Tautan untuk mengarahkan ke PDF penuh -->
         <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
           <button class="btn btn-primary">Lihat PDF Lengkap</button>
@@ -273,7 +274,6 @@ Buku Aku Kenal Siapa Diriku
             <p><strong>Email:</strong> <span>sman1tgraja@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100087815304725&mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/ospksmantra?igsh=eHZvam0zbmRiZ2w3"><i class="bi bi-instagram"></i></a>
             <a href="https://youtube.com/@sman1tanjungraja?si=CoKSNT8FOUjjFaV"><i class="bi bi-youtube"></i></a>
@@ -343,4 +343,4 @@ Buku Aku Kenal Siapa Diriku
 
 </body>
 
-</html>
+  </html>
