--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 </ul>
             <li class="dropdown"><a href="#"><span>Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Ekstrakurikuler</a></li>
-                  <li><a href="#">PPDB 2024</a></li>
-                  <li><a href="#">E-learning</a></li>
-                  <li><a href="#">Media Sosial</a></li>
+                  <li><a href="https://sman1tra.github.io/Ekstrakurikuler/">Ekstrakurikuler</a></li>
+                  <li><a href="ppdb.html">PPDB 2024</a></li>
+                  <li><a href="https://sman1tra.github.io/E-learning/">E-learning</a></li>
+                  <li><a href="https://sman1tra.github.io/Medsos/">Media Sosial</a></li>
                 </ul>
             <li class="dropdown"><a href="#"><span>Galeri</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
@@ -69,7 +69,7 @@
                   <li><a href="https://sman1tra.github.io/Galeri/Video/">Galeri Video</a></li>
                 </ul>
           <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
-          <li><a href="index.html#contact">Hubungi Kami</a></li>
+          <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -96,7 +96,8 @@
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
             <div class="content">
-              <img src="IMG-20250107-WA0004.jpg", width="100%", height="200px", max-height="300px">
+              <img src="IMG-20250107-WA0004.jpg", width="100%", max-height="30%">
+              <p></p>
               <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>
                 Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
@@ -263,7 +264,6 @@ Buku Aku Kenal Siapa Diriku
             <p><strong>Email:</strong> <span>sman1tgraja@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100087815304725&mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/ospksmantra?igsh=eHZvam0zbmRiZ2w3"><i class="bi bi-instagram"></i></a>
             <a href="https://youtube.com/@sman1tanjungraja?si=CoKSNT8FOUjjFaV"><i class="bi bi-youtube"></i></a>
@@ -277,7 +277,7 @@ Buku Aku Kenal Siapa Diriku
             <li><a href="https://sman1tra.github.io/Profil/Sekolah/">Profil</a></li>
             <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
             <li><a href="https://sman1tra.github.io/Galeri/Foto/">Galeri</a></li>
-            <li><a href="#">Hubungi Kami</a></li>
+            <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
           </ul>
         </div>
 
