--- a/Berita1.html
+++ b/Berita1.html
@@ -47,7 +47,7 @@
         <h1 class="sitename">SMA Negeri 1 Tanjung Raja</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+            <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="https://sman1tra.github.io/Home/" class="active">Beranda</a></li>
             <li class="dropdown"><a href="#"><span>Profil</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -59,10 +59,10 @@
                 </ul>
             <li class="dropdown"><a href="#"><span>Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Ekstrakurikuler</a></li>
-                  <li><a href="#">PPDB 2024</a></li>
-                  <li><a href="#">E-learning</a></li>
-                  <li><a href="#">Media Sosial</a></li>
+                  <li><a href="https://sman1tra.github.io/Ekstrakurikuler/">Ekstrakurikuler</a></li>
+                  <li><a href="ppdb.html">PPDB 2024</a></li>
+                  <li><a href="https://sman1tra.github.io/E-learning/">E-learning</a></li>
+                  <li><a href="https://sman1tra.github.io/Medsos/">Media Sosial</a></li>
                 </ul>
             <li class="dropdown"><a href="#"><span>Galeri</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
@@ -70,10 +70,10 @@
                   <li><a href="https://sman1tra.github.io/Galeri/Video/">Galeri Video</a></li>
                 </ul>
           <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
-          <li><a href="index.html#contact">Hubungi Kami</a></li>
+          <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+            </nav>
 
       <a class="btn-getstarted" href="https://sman1tra.github.io/Login/">Login</a>
 
@@ -168,8 +168,7 @@ Buku Aku Kenal Siapa Diriku
       </p>
       <div class="profile mt-auto">
         <!-- Menampilkan gambar halaman pertama PDF -->
-        <iframe src="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/preview" width="100%" height="200px" allow="autoplay"></iframe>
-        
+               <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
         <!-- Tautan untuk mengarahkan ke PDF penuh -->
         <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
           <button class="btn btn-primary">Lihat PDF Lengkap</button>
@@ -287,7 +286,7 @@ Buku Aku Kenal Siapa Diriku
             <li><a href="https://sman1tra.github.io/Profil/Sekolah/">Profil</a></li>
             <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
             <li><a href="https://sman1tra.github.io/Galeri/Foto/">Galeri</a></li>
-            <li><a href="#">Hubungi Kami</a></li>
+            <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
           </ul>
         </div>
 
