--- a/Berita1.html
+++ b/Berita1.html
@@ -97,7 +97,7 @@
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
             <div class="content">
-              <h3>Hebat!, Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
+              <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>07 Januari 2025 | Ditulis oleh OSIS SMANTRA</p>
               <div class="action-buttons">
     <button onclick="printCard()" class="print-button">
