--- a/Berita1.html
+++ b/Berita1.html
@@ -52,7 +52,7 @@
           <li><a href="https://sman1tra.github.io/Home/" class="active">Beranda</a></li>
             <li class="dropdown"><a href="#"><span>Profil</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="https://sman1tra.github.io/Profil/Sekolah/">Profil Sekolah</a></li>
+                  <li><a href="https://sman1tra.github.io/Profil-Sekolah/">Profil Sekolah</a></li>
                   <li><a href="https://sman1tra.github.io/Guru/">Guru dan Staf</a></li>
                   <li><a href="https://sman1tra.github.io/OSIS/">OSIS</a></li>
                   <li><a href="https://sman1tra.github.io/Fasilitas/">Fasilitas</a></li>
@@ -282,8 +282,8 @@ Buku Aku Kenal Siapa Diriku
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Beranda</a></li>
-            <li><a href="https://sman1tra.github.io/Profil/Sekolah/">Profil</a></li>
+            <li><a href="https://sman1tra.github.io/Home/">Beranda</a></li>
+            <li><a href="https://sman1tra.github.io/Profil-Sekolah/">Profil</a></li>
             <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
             <li><a href="https://sman1tra.github.io/Galeri/Foto/">Galeri</a></li>
             <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
