--- a/Berita2.html
+++ b/Berita2.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
-            </title>
+  <title>Sosialisasi  pengenalan minat, bakat, dan potensi siswa sebagai Langkah awal dalam pemilihan mata pelajaran pilihan bagi siswa kelas X</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
