--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               </p>
               <ul>
               <p></p>
-              <a href="https://sman1tra.github.io/Artikel/Berita2.html" class="btn more-btn">Selengkapnya</a>
+              <a href="Berita2.html" class="btn more-btn">Selengkapnya</a>
             </div>
 
           </div>
