--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
       </div>
     </section><!-- /Hero Section -->
     <!-- Featured Services Section -->
+                <section id="features-details" class="features-details section">
+        <div class="row gy-4 justify-content-between features-item">
+
+          <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="content">
+              <img src="IMG-20250107-WA0004.jpg", width="100%", max-height="30%">
+              <p></p>
+              <h3>Ajarkan Siswa rasa empati dan saling berbagi, SMAN 1 Tanjung Raja adakan Pesantren Kilat dan SMANTRA Berbagi</h3>
+              <p>SMAN 1 Tanjung Raja mengadakan Pesantren Kilat Ramadhan dan SMANTRA Berbagi. Acara ini di selenggarakan selama 3 Hari dari 17-20 Maret 2025
+              </p>
+              <ul>
+              <p></p>
+              <a href="Berita ramadhan.html" class="btn more-btn">Selengkapnya</a>
+            </div>
+
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+          </div>
+
+        </div><!-- Features Item -->
     <section id="features-details" class="features-details section">
         <div class="row gy-4 justify-content-between features-item">
 
